# PyFlare

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Phase4_Development_Plan.md  Project_Overview.md  README.md  Technical_Architecture.md  vcpkg.json
.claude/: settings.local.json
config/: collector.yaml
deploy/docker/: .env.example  .env.prod.example  Dockerfile.collector  Dockerfile.processor  Dockerfile.query  Dockerfile.ui  docker-compose.prod.yml  docker-compose.yml  nginx.conf
docs/developer/: architecture.md  building.md  components.md  extending.md
docs/user/: configuration.md  getting-started.md  grafana-integration.md  sdk-reference.md  ui-guide.md
grafana/pyflare-datasource/: package.json
grafana/pyflare-datasource/src/: ConfigEditor.tsx  QueryEditor.tsx  datasource.ts  module.ts  plugin.json  types.ts
proto/pyflare/v1/: collector_service.proto  common.proto  trace.proto
scripts/: build.sh  lint.sh  setup-vcpkg.ps1  setup-vcpkg.sh  test.sh
sdk/python/: README.md  pyproject.toml
sdk/python/pyflare/: __init__.py  cost.py  decorators.py  exporters.py  sdk.py  types.py
sdk/python/pyflare/integrations/: __init__.py  anthropic.py  langchain.py  openai.py  pyflame.py  pytorch.py
sdk/python/pyflare/security/: __init__.py  pii_scrubber.py
sdk/python/tests/: __init__.py  test_sdk.py
src/collector/: CMakeLists.txt  batcher.cpp  batcher.h  collector.cpp  collector.h  kafka_exporter.cpp  kafka_exporter.h  main.cpp  otlp_receiver.cpp  otlp_receiver.h  sampler.cpp  sampler.h  types.h
src/common/: CMakeLists.txt  config.cpp  config.h  error.cpp  error.h  logging.cpp  logging.h  metrics.cpp  metrics.h  thread_pool.cpp  thread_pool.h
src/processor/: CMakeLists.txt  kafka_consumer.cpp  kafka_consumer.h  message_processor.cpp  message_processor.h
src/processor/alerting/: alert_rules.cpp  alert_rules.h  alert_service.cpp  alert_service.h  deduplicator.cpp  deduplicator.h
src/processor/cost/: budget_manager.cpp  budget_manager.h  token_extractor.cpp  token_extractor.h  tracker.cpp  tracker.h
src/processor/drift/: concept_drift_detector.cpp  concept_drift_detector.h  drift_detector.cpp  drift_detector.h  drift_service.cpp  drift_service.h  embedding_drift.cpp  feature_drift.cpp  mmd_detector.cpp  mmd_detector.h  multi_dim_analyzer.cpp  multi_dim_analyzer.h  prediction_drift_detector.cpp  prediction_drift_detector.h  psi_detector.cpp  psi_detector.h  reference_store.cpp  reference_store.h
src/processor/eval/: custom_evaluator.cpp  custom_evaluator.h  evaluator.cpp  evaluator.h  hallucination.cpp  llm_judge.cpp  llm_judge.h  prompt_injection_detector.cpp  prompt_injection_detector.h  rag_evaluator.cpp  rag_evaluator.h  semantic_similarity.cpp  semantic_similarity.h  toxicity_detector.cpp  toxicity_detector.h
src/processor/intelligence/: intelligence_pipeline.cpp  intelligence_pipeline.h
src/processor/rca/: analyzer.cpp  analyzer.h  counterfactual.cpp  counterfactual.h  failure_cluster.cpp  failure_cluster.h  pattern_detector.cpp  pattern_detector.h  rca_service.cpp  rca_service.h  slice_analyzer.cpp  slice_analyzer.h  temporal_analyzer.cpp  temporal_analyzer.h
src/query/: CMakeLists.txt  api.cpp  api.h  sql_parser.cpp
src/query/handlers/: alerts_handler.cpp  alerts_handler.h  costs_handler.h  drift_handler.h  evaluations_handler.h  handler_base.h  handlers.cpp  intelligence_handler.cpp  intelligence_handler.h  rca_handler.h  traces_handler.h
src/storage/: CMakeLists.txt
src/storage/clickhouse/: client.cpp  client.h
src/storage/qdrant/: client.cpp  client.h
src/storage/redis/: client.cpp  client.h
src/storage/schemas/: 001_traces.sql  002_costs.sql  003_drift_alerts.sql  004_evaluations.sql
tests/integration/: CMakeLists.txt  pipeline_test.cpp
tests/unit/: CMakeLists.txt
tests/unit/collector/: CMakeLists.txt  batcher_test.cpp  sampler_test.cpp
tests/unit/common/: config_test.cpp  logging_test.cpp  metrics_test.cpp  thread_pool_test.cpp
tests/unit/processor/: cost_tracker_test.cpp  drift_detector_test.cpp
tests/unit/processor/alerting/: alerting_test.cpp
tests/unit/processor/cost/: budget_manager_test.cpp
tests/unit/processor/drift/: mmd_detector_test.cpp  psi_detector_test.cpp
tests/unit/processor/eval/: llm_judge_test.cpp
tests/unit/processor/intelligence/: intelligence_pipeline_test.cpp
tests/unit/processor/rca/: slice_analyzer_test.cpp
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/: AlertsPanel.tsx  CostCharts.tsx  DriftHeatmap.tsx  EvaluationResults.tsx  IntelligenceDashboard.tsx  Layout.tsx  NotificationCenter.tsx  RCAExplorer.tsx  TraceViewer.tsx
ui/src/components/auth/: ApiKeyManager.tsx  LoginForm.tsx  ProtectedRoute.tsx
ui/src/components/costs/: BudgetConfig.tsx  BudgetTracker.tsx  CostBreakdownTable.tsx  CostForecast.tsx  CostOverview.test.tsx  CostOverview.tsx  TokenUsageChart.tsx
ui/src/components/drift/: DistributionChart.tsx  DriftAlertConfig.tsx  DriftOverview.test.tsx  DriftOverview.tsx  DriftTimeline.tsx  FeatureDriftBreakdown.tsx
ui/src/components/layout/: Breadcrumbs.tsx  Header.tsx  Sidebar.tsx  UserMenu.tsx
ui/src/components/traces/: LiveTraceStream.tsx  SpanDetail.tsx  SpanWaterfall.tsx  TraceComparison.tsx  TraceFilters.tsx  TraceList.tsx  TraceSearch.test.tsx  TraceSearch.tsx
ui/src/contexts/: AuthContext.tsx  ThemeContext.tsx  WebSocketContext.tsx
ui/src/hooks/: useAuth.ts  useCosts.ts  useDrift.ts  useTheme.ts  useTraces.ts  useWebSocket.ts
ui/src/pages/: Alerts.tsx  Costs.tsx  Dashboard.tsx  Drift.tsx  Login.tsx  Settings.tsx  TraceDetail.tsx  Traces.tsx
ui/src/services/: api.ts  websocket.ts
ui/src/styles/themes/: variables.css
ui/src/test/: setup.ts
ui/src/types/: index.ts
ui/src/utils/: csrf.ts  secureStorage.ts
